force-app/main/default/objects/Reviewer_Response_Line_Item__c/Reviewer_Response_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Reviewer Response Line Item</label>
    <nameField>
        <displayFormat>RRLI-{00000}</displayFormat>
        <label>Reviewer Response Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviewer Response Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>