force-app/main/default/objects/Reviewer_Response_Line_Item__c/fields/Reviewer_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer Mapping</label>
    <referenceTo>Reviewer_Mapping__c</referenceTo>
    <relationshipLabel>Reviewer Response Line Items</relationshipLabel>
    <relationshipName>Reviewer_Response_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>