force-app/main/default/objects/Reviewer_Response_Line_Item__c/fields/Scheme_Section__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheme Section</label>
    <referenceTo>Scheme_Section__c</referenceTo>
    <relationshipLabel>Reviewer Response Line Items</relationshipLabel>
    <relationshipName>Reviewer_Response_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>