force-app/main/default/objects/Reviewer_Response_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>Section__c</columns>
    <columns>Scheme_Section__c</columns>
    <columns>Reviewer_Mapping__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>